--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -8,16 +8,22 @@ body {
   font-weight: 800;
 }
 
+
+.para {
+  font-size: 22px;
+}
 .small-para {
   font-size: 14px;
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
+/* .confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+}  */
 
-.confirm {
+#confirm-button.confirm {
   background: green;
   color: white;
   font-weight: bold;
@@ -29,14 +35,22 @@ body {
   font-size: 20px;
 }
 
+
+
+/* div.text {
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: 100;
+} */
+
+text {
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: 100;
+}
+
 .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
-}
-
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
 }
